--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -7,6 +7,12 @@
     android:background="@color/colorPrimary"
     tools:context="com.biaoge666.coolweather.WeatherActivity">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/bing_pic_img"
+        android:scaleType="centerCrop"/>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -17,15 +23,15 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:fitsSystemWindows="true">
+
         <include layout="@layout/title" />
         <include layout="@layout/now" />
         <include layout="@layout/forecast" />
         <include layout="@layout/aqi" />
         <include layout="@layout/suggestion" />
+
     </LinearLayout>
-
-
     </ScrollView>
-
 </FrameLayout>
